arkts_static_test/08_Statements/ets_cases/8.8_for_Statements/compile-fail/STM_08_08_029_FAIL_FOR_WITHOUT_PARENS.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id STM_08_08_029_FAIL_FOR_WITHOUT_PARENS
 * @expect compile-fail
 * @section 8.8
 * @design for 语句缺少括号应产生编译错误
 * @note 反向用例：验证该场景应产生编译时错误。
 */
function testForWithoutParensFail(): void {
  for let i: int = 0; i < 3; i++ { console.log("bad") }
}
